<resources>
    <string name="app_name">Tanamanio</string>
    <string name="my_name">Ruly Adhika Makarim Hanif</string>
    <string name="my_email">rulihanif@gmail.com</string>
    <string name="about_me">About Me</string>
    <string name="your_plants">Tanaman Milikmu</string>
    <string name="how_to_care">Cara Merawat</string>
    <string name="description">Deskripsi</string>
    <string name="greetin_my_name">Halo, Ruly</string>
    <string name="welcome_back">Selamat Datang Kembali</string>
    <string name="your_plant_title">Tanaman milikmu</string>
    <string name="re_learning_your_plant">Ruly, pelajari kembali mengenai tanamanmu!</string>
    <string name="see_all">Lihat Semua</string>
    <string name="search_by_categories">Cari berdasarkan kategori</string>
    <string name="just_for_you">Khusus untukmu, klik katalog yang sedang kamu cari ya</string>
    <string name="banner_image_of_plant">Banner image of plant</string>
    <string name="dont_have_any_plants">Yah kamu belum memiliki tanaman apapun :(\nYuk cari tanaman yang sesuai dengan keinginanmu</string>
    <string name="hitz_plant">Tanaman hitz</string>
    <string name="hitz_plant_description">Cek tanaman yang sedang naik pamornya yuk!</string>
    <string name="search">Pencarian</string>
    <string name="content_description_search">Cari Tanaman</string>
    <string name="plant_detail">Detail Tanaman</string>
    <string name="favourite">Favorit</string>
    <string name="content_description_favourite">Favoritkan Tanaman</string>
    <string name="collection">Koleksi</string>
    <string name="content_description_collection">Koleksikan Tanaman</string>
    <string-array name="data_id">
        <item>43a0451a-399d-4cf1-8c0e-8f72d87622a6</item>
        <item>7f4b3e9f-2b13-4c27-985f-645819d3a99c</item>
        <item>02c8f6e5-6a85-42b3-90a3-14e12c196d0e</item>
        <item>c9f0f16d-d5be-4658-9e92-8939a18c45ab</item>
        <item>a6fbfa60-953c-48b9-afde-2bba1ec7e321</item>
        <item>d3dcb0e7-1c52-4746-981c-ebe68d27ad6c</item>
        <item>0b51aa3c-9d4e-4df7-a4a2-17e6344f0be0</item>
        <item>98bf7bf5-6e5e-4e9c-ae2f-7d45ea9c719a</item>
        <item>25669f53-3a7d-492c-96ab-492d83a8db51</item>
        <item>1b8a0f75-c9d3-4a0f-8dd9-695dbb777347</item>
        <item>f3665770-984d-4f3c-b819-6c272fe83a93</item>
        <item>a183a1f7-3fb5-40d3-8e4e-59ac3c84a12c</item>
        <item>6d35ee51-2f84-4a0f-8b02-5e2ab04ea0c0</item>
        <item>e7084783-eb01-481a-9b98-930617c6d6bf</item>
        <item>9a2b7e8b-100c-4d07-8c50-52a13ab0a116</item>
    </string-array>
    <string-array name="data_name">
        <item>Mawar</item>
        <item>Anggrek Phalaenopsis</item>
        <item>Monstera Deliciosa</item>
        <item>Lavender</item>
        <item>Begonia Rex</item>
        <item>Kalanchoe</item>
        <item>Sansevieria</item>
        <item>Kalathea</item>
        <item>Echeveria</item>
        <item>Alocasia</item>
        <item>Pilea Peperomioides</item>
        <item>Tomat</item>
        <item>Jeruk</item>
        <item>Stroberi</item>
        <item>Salvia</item>
    </string-array>
    <string-array name="data_latina_name">
        <item>Rosa spp.</item>
        <item>Phalaenopsis spp.</item>
        <item>Monstera deliciosa</item>
        <item>Lavandula spp.</item>
        <item>Begonia rex-cultorum</item>
        <item>Kalanchoe spp.</item>
        <item>Sansevieria spp.</item>
        <item>Calathea spp.</item>
        <item>Echeveria spp.</item>
        <item>Alocasia spp.</item>
        <item>Pilea peperomioides</item>
        <item>Solanum lycopersicum</item>
        <item>Citrus sinensis</item>
        <item>Fragaria x ananassa</item>
        <item>Salvia officinalis</item>
    </string-array>
    <string-array name="data_description">
        <item>
            Mawar adalah tanaman berbunga indah yang dikenal karena aroma harumnya. Bunga mawar tersedia dalam berbagai warna dan varietas. Mawar sering digunakan dalam rangkaian bunga dan acara khusus.
        </item>
        <item>
            Anggrek Phalaenopsis adalah tanaman hias berbunga dengan bunga-bunga yang cantik dan tahan lama. Mereka datang dalam berbagai warna dan varietas, menjadikannya pilihan populer di dalam ruangan.
        </item>
        <item>
            Monstera Deliciosa adalah tanaman hias dengan daun besar berlobus dan lubang-lubang yang unik. Tanaman ini memberikan sentuhan tropis di dalam rumah.
        </item>
        <item>
            Lavender adalah tanaman hias berbunga dengan aroma yang harum. Bunga-bunga lavender digunakan dalam berbagai produk aromaterapi, sementara daunnya berwarna abu-abu.
        </item>
        <item>
            Begonia Rex adalah tanaman hias daun dengan daun berwarna-warni yang sangat dekoratif. Daun-daunnya memiliki berbagai pola dan warna.
        </item>
        <item>
            Kalanchoe adalah tanaman hias berbunga dengan bunga-bunga cerah yang tahan lama. Bunga-bunga ini hadir dalam berbagai warna dan menciptakan tampilan yang memikat.
        </item>
        <item>
            Sansevieria, juga dikenal sebagai lidah mertua, adalah tanaman hias daun yang tahan terhadap berbagai kondisi tumbuh. Daunnya tegak, berbentuk pedang, dan berwarna hijau gelap.
        </item>
        <item>
            Kalathea adalah tanaman hias daun dengan daun yang indah dan motif yang menarik. Beberapa varietas memiliki daun dengan pola seperti marmer atau garis-garis yang kontras.
        </item>
        <item>
            Echeveria adalah tanaman sukulen hias yang membentuk roset daun yang kompak. Daun-daunnya biasanya berdaging dan berwarna hijau atau biru keabuan.
        </item>
        <item>
            Alocasia adalah tanaman hias daun dengan daun besar yang sering memiliki pola unik di atasnya. Tanaman ini memberikan nuansa tropis di dalam rumah.
        </item>
        <item>
            Pilea Peperomioides adalah tanaman hias dengan daun bundar yang unik dan batang panjang yang menjulang. Tanaman ini memiliki penampilan yang modern dan mudah dirawat.
        </item>
        <item>
            Tomat adalah tanaman sayuran yang menghasilkan buah merah yang digunakan dalam berbagai hidangan. Mereka bisa ditanam di kebun atau pot.
        </item>
        <item>
            Jeruk adalah tanaman buah yang menghasilkan buah berkulit tebal dan berwarna oranye yang kaya akan vitamin C. Jeruk sering ditanam di kebun atau taman.
        </item>
        <item>
            Stroberi adalah tanaman buah yang menghasilkan buah merah manis yang bisa dimakan segar atau digunakan dalam kue dan selai. Stroberi umumnya ditanam di kebun atau dalam pot.
        </item>
        <item>
            Salvia adalah tanaman herbal yang digunakan dalam masakan dan obat-obatan. Daunnya aromatik dan berbagai jenis salvia digunakan di seluruh dunia.
        </item>
    </string-array>
    <string-array name="data_category">
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Tanaman Hias</item>
        <item>Sayuran</item>
        <item>Tanaman Buah</item>
        <item>Tanaman Buah</item>
        <item>Tanaman Hias</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://outerbloom.com/cdn/shop/articles/7_Arti_Bunga_Mawar_Sebagai_Kado_Valentine_1024x1024.jpg</item>
        <item>https://www.tukukembang.com/wp-content/uploads/2021/08/anggrek-bulan-lidah-merah-rangkaian-4-tangkai.jpg</item>
        <item>https://cdn.shopify.com/s/files/1/0150/6262/products/the-sill_monstera_variant_medium_hyde_cream_50145be1-5183-4692-80ed-a927d5625fc8.jpg</item>
        <item>https://cdn1.katadata.co.id/media/images/thumb/2022/11/23/Ilustrasi_bunga_lavender-2022_11_23-22_22_42_a411fbbdf41dd6e13feefd6246b77ce2_960x640_thumb.png</item>
        <item>https://www.thespruce.com/thmb/Kul5xxbJ3A99kttMgjpiXehM_VQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/grow-rex-begonia-1902492-5-94396a6711614886a9bfbbca7e6a9306.jpg</item>
        <item>https://www.bhg.com/thmb/1HEL0y6P0zuFN3Q9502HziEM7K0=/1244x0/filters:no_upscale():strip_icc()/florists-kalanchoe-e49b3ec8-01cf76b3cce04317917ed8d727a78068.jpg</item>
        <item>https://www.ikea.com/us/en/images/products/sansevieria-trifasciata-potted-plant-mother-in-laws-tongue__0908898_pe676659_s5.jpg</item>
        <item>https://cdn0-production-images-kly.akamaized.net/EflTSaFj-aUH1pl3Y2wpyEmOcxg=/500x667/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4267713/original/091898900_1671589738-20210220100811-1-ilustrasi-tanaman-hias-calathea-009-tantri-setyorini.jpg</item>
        <item>https://cdnwpseller.gramedia.net/wp-content/uploads/2021/10/14202542/alocasia-amazonica-1.jpg</item>
        <item>https://asset-a.grid.id/crop/0x0:0x0/x/photo/2021/12/04/merawat-tumbuhan-sukulenjpg-20211204113840.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Pilea_peperomioides_Chinese_money_plant.jpg/640px-Pilea_peperomioides_Chinese_money_plant.jpg</item>
        <item>https://cf.organicbazar.net/wp-content/uploads/2021/06/Tomato-1.jpg</item>
        <item>https://www.starkbros.com/images/dynamic/2243.jpg</item>
        <item>https://m.media-amazon.com/images/I/61lScWdYK1L.jpg</item>
        <item>https://balconygardenweb.b-cdn.net/wp-content/uploads/2023/05/Salvias-in-Pots.-1.jpeg</item>

    </string-array>
    <string-array name="data_difficulty">
        <item>Lumayan Sulit</item>
        <item>Lumayan Sulit</item>
        <item>Mudah</item>
        <item>Mudah</item>
        <item>Lumayan Sulit</item>
        <item>Mudah</item>
        <item>Mudah</item>
        <item>Lumayan Sulit</item>
        <item>Mudah</item>
        <item>Lumayan Sulit</item>
        <item>Mudah</item>
        <item>Lumayan Sulit</item>
        <item>Lumayan Sulit</item>
        <item>Lumayan Sulit</item>
        <item>Mudah</item>
    </string-array>
    <string name="profile">Profil</string>
    <string name="home">Beranda</string>
    <string name="shop">Shop</string>
</resources>