<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop" />

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favourite_border"
        android:title="@string/favourite" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
</menu>